vcluster_versioned_docs/version-0.37.0/configure/vcluster-yaml/policies/admission-control.mdx
---
title: Central admission control
sidebar_label: centralAdmission
sidebar_class_name: pro host-nodes
sidebar_position: 5
description: Configuration for central admission control.
---

import AdmissionControl from '../../../_partials/config/policies/centralAdmission.mdx'
import ProAdmonition from '../../../_partials/admonitions/pro-admonition.mdx'
import TenancySupport from '../../../_fragments/tenancy-support.mdx';
import FeatureTable from '@site/src/components/FeatureTable';

<FeatureTable names="vcp-distro-centralized-admission-control" />




<TenancySupport hostNodes="true" />

<ProAdmonition/>

Centralized admission control is an advanced feature for cluster admins that have custom rules that they need to apply to the tenant cluster. Cluster admins can enforce [Kubernetes admission webhooks](https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/) that reference the control plane cluster or external policy services from within the tenant cluster. Examples of validating and mutating webhook based policy engines include OPA, Kyverno, and jsPolicy.

This feature requires the `MutatingAdmissionWebhook` and `ValidatingAdmissionWebhook` admission controllers to be enabled. For more information, see the Kubernetes [admission controllers reference](https://kubernetes.io/docs/reference/access-authn-authz/admission-controllers/#is-there-a-recommended-set-of-admission-controllers-to-use).

:::warning Configuring this is not the same as enforcing anything
This setting wires up the webhook plumbing only. It provides no protection on its own. Protection requires a reachable policy engine on the other end, with active policies whose rules actually cover the resource kinds and operations you care about. Verify the engine has rules loaded, not just that the webhook configuration exists. Tenant-facing admission also never sees translated, synced objects, or workloads a host-side controller generates from a tenant custom resource, such as a KubeVirt `virt-launcher` pod. Those need control plane cluster-side admission instead. See [admission and policy coverage](../../../security/shared-nodes-hardening.mdx#admission-and-policy-coverage).
:::

:::warning
- Central admission control is read-only after tenant cluster creation. Admins cannot bypass or alter hooks after vCluster deployment.
- If you need to modify or delete webhook configurations, do not use central admission control. Instead, manually map the host policy service into the tenant cluster.
:::

Central admission webhooks are different from the other policies:

- LimitRange and ResourceQuota resources are created and enforced on the control plane cluster. They do not appear as resources in the tenant cluster.
- A user could define LimitRange and ResourceQuota resources inside the tenant cluster, but they have full control over them and can delete them when needed.
- Webhooks are different because they need to be configured inside the tenant cluster in order for them to be called by the vCluster's API server.
- vCluster rewrites these definitions to point to a proxy for a control plane cluster service that handles webhook requests. The host might also have webhook configurations that use this service.
- A user can still install a webhook service or webhook configuration into the tenant cluster outside of this config, but it would run inside the tenant cluster like any other workload.

## Access tenant identifiers in webhooks

vCluster rewrites the namespace of a namespace-scoped object to the host namespace where vCluster runs. This is not visible to the user, but the admission controller can use mechanisms like the namespace selector as usual. Some admission controllers such as Gatekeeper rely on the namespace always being present in the underlying cluster and wouldn't work otherwise. To access the tenant namespace in a webhook, read the `request.options.vCluster.namespace.metadata.name` field in the [admission request object](https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#request), which holds the full tenant namespace object.

In some cases a webhook running inside the tenant cluster needs the translated name of a pod. This is the name used when the pod is created on the control plane cluster. vCluster puts the translated pod name under the `request.options.vCluster.name` field in the [admission request object](https://kubernetes.io/docs/reference/access-authn-authz/extensible-admission-controllers/#request). The final name is only available during the validation phase, so this only works with `validatingWebhooks` that have rules configured for pods.

## Certificate configuration

For webhooks using self-signed or private certificates, add the `caBundle` field:

```bash
# Get base64-encoded CA certificate from secret
kubectl get secret webhook-tls-secret -n webhook-namespace -o jsonpath='{.data.ca\.crt}'
```

:::warning
Missing `caBundle` with `failurePolicy: Fail` can make vCluster unrecoverable. Test with `failurePolicy: Ignore` first.
:::

## Kyverno example

This example ensures that all new ConfigMap resources are sent to a mutating webhook on the control plane cluster.

:::warning Apply Enforce-mode policies after the tenant is ready
A Kyverno `ClusterPolicy` running on the control plane cluster in `Enforce` mode validates the resources that vCluster syncs from the tenant. This includes vCluster's own system pods, which don't carry an `app.kubernetes.io/name` label. A label-requiring policy applied before the tenant is provisioned rejects those pods, and the VirtualClusterInstance ends in `Failed`.

To avoid this, do one of the following:

- Apply Enforce-mode policies only after the tenant cluster reaches `Ready`.
- Start the policy in `Audit` mode.
- Scope the policy to exclude vCluster system namespaces and service accounts.
:::

```yaml
centralAdmission:
  mutatingWebhooks:
    - apiVersion: admissionregistration.k8s.io/v1
      kind: MutatingWebhookConfiguration
      metadata:
        name: kyverno-webhook
      webhooks:
      - admissionReviewVersions:
        - v1
        clientConfig:
          # Add caBundle for self-signed certificates
          caBundle: LS0tLS1CRUdJTi... # Base64-encoded PEM certificate
          service:
            name: kyverno-svc
            namespace: kyverno
            path: /mutate/fail
            port: 443
        failurePolicy: Fail
        matchPolicy: Equivalent
        name: mutate.kyverno.svc-fail
        objectSelector: {}
        reinvocationPolicy: IfNeeded
        rules:
        - apiGroups:
          - ""
          apiVersions:
          - v1
          operations:
          - CREATE
          resources:
          - configmaps
          scope: '*'
        sideEffects: NoneOnDryRun
        timeoutSeconds: 10
```

Any time a ConfigMap is created, the vCluster API server forwards the admission request to a proxy, which in turn calls the actual admission hook running in the control plane cluster in the `kyverno` namespace.

The service providing the webhooks should not rely on the real names of the objects if they are synced on the control plane cluster (for example, pods). The requests that reach the host admission service hold the objects from the tenant cluster, so your policies need to be able to handle those objects (except for the namespace which is rewritten as outlined above).

:::warning Policies that key off name or namespace
The admission webhook fires against the translated name (`<pod>-x-<namespace>-x-<tenant>`) and the host namespace, not the tenant's view. Policies that key off `metadata.name` or the namespace produce wrong results:

- A uniqueness or collision check silently passes resources that actually collide.
- A naming or length check rejects tenant resources that are valid in the tenant's own view.
- Namespace-scoped match and exclude rules apply to the wrong set of objects.

To read the original tenant identifiers, see [Access tenant identifiers in webhooks](#access-tenant-identifiers-in-webhooks).
:::

The hook services do not require authentication as the proxy does not have access to the `AdmissionConfiguration` object or the files it references. Most policy engines (such as jsPolicy, Kyverno, or Gatekeeper) do not set authentication by default, so it should work with most installations.

If a user inside the tenant cluster (admin or not) tries to delete one of your admission hooks, that uses is prompted with the following error message:

```bash
kubectl delete kyverno-webhook
error: the resource kyverno-webhook is protected
```

<!-- vale off -->
## Gatekeeper (OPA) example

Ensure you [install Gatekeeper](https://open-policy-agent.github.io/gatekeeper/website/docs/install/) to your Kubernetes cluster.
<!-- vale on -->

Create the following constraint template that denies pods without specified labels:

```yaml
apiVersion: config.gatekeeper.sh/v1alpha1
kind: Config
metadata:
  name: config
  namespace: "gatekeeper-system"
spec:
  match:
    - excludedNamespaces: ["kube-*"]
      processes: ["*"]
  sync:
    syncOnly:
      - group: ""
        version: "v1"
        kind: "Namespace"
      - group: ""
        version: "v1"
        kind: "Pod"
---
apiVersion: templates.gatekeeper.sh/v1
kind: ConstraintTemplate
metadata:
  name: k8srequiredlabels
spec:
  crd:
    spec:
      names:
        kind: K8sRequiredLabels
      validation:
        # Schema for the `parameters` field
        openAPIV3Schema:
          type: object
          properties:
            labels:
              type: array
              items:
                type: string
  targets:
    - target: admission.k8s.gatekeeper.sh
      rego: |
        package k8srequiredlabels

        violation[{"msg": msg, "details": {"missing_labels": missing}}] {
          provided := {label | input.review.object.metadata.labels[label]}
          required := {label | label := input.parameters.labels[_]}
          missing := required - provided
          count(missing) > 0
          msg := sprintf("you must provide labels: %v", [missing])
        }
```

Create the constraint:

```yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRequiredLabels
metadata:
  name: pod-required-labels
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
    labelSelector:
      matchLabels:
        test: gatekeeper
  parameters:
    labels: ["gatekeeper"]
```

Then start the vCluster with the following configuration:

```yaml
policies:
  centralAdmission:
    validatingWebhooks:
    - apiVersion: admissionregistration.k8s.io/v1
      kind: ValidatingWebhookConfiguration
      metadata:
        name: gatekeeper-webhook
      webhooks:
      - admissionReviewVersions:
        - v1
        clientConfig:
          # Add caBundle for self-signed certificates
          caBundle: LS0tLS1CRUdJTi... # Base64-encoded PEM certificate
          service:
            name: gatekeeper-webhook-service
            namespace: gatekeeper-system
            path: /v1/admit
            port: 443
        failurePolicy: Fail
        matchPolicy: Exact
        name: validation.gatekeeper.sh
        objectSelector: {}
        rules:
        - apiGroups:
          - '*'
          apiVersions:
          - '*'
          operations:
          - CREATE
          - UPDATE
          resources:
          - pods
          scope: Namespaced
        sideEffects: None
        timeoutSeconds: 10
```

Within the vCluster try to create the following pod which should get denied:

```bash
$ echo "apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels:
    test: gatekeeper
spec:
  containers:
    - image: nginx
      name: nginx" | kubectl create -f -
admission webhook "validation.gatekeeper.sh" denied the request: you must provide labels: [gatekeeper]
```

## Network policies
If you are using [network policies](./network-policy.mdx), admission webhooks traffic from the vCluster control plane must be allowed.

```yaml title="vcluster.yaml"
policies:
  networkPolicy:
    controlPlane:
      egress:
      - to:
        # Allow vcluster control plane traffic to the gatekeeper webhook.
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: gatekeeper-system
          podSelector:
            matchLabels:
              gatekeeper.sh/operation: webhook
```

## Config reference

<AdmissionControl/>
